# flask-profiler-modern

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-extension.py  docker-compose.yaml  pyproject.toml
examples/: app.py
flask_profiler/: flask_profiler.py
flask_profiler/static/src/js/: filtering.js  utils.js
flask_profiler/storage/: base.py  mongo.py  sql_alchemy.py  sqlite.py
src/: lib.rs  speedscope.rs
tests/: module_accounts.py  test_extension_pattern.py  test_profiler_http.py
